Added some code to make the AI read templates. not much luck rn

--- a/workdir/index.html
+++ b/workdir/index.html
@@ -1,39 +1,38 @@
 
-<!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
     <header>
-        <h1 style="font-family: Arial, sans-serif; color: #432B1A">Chocolates for World Peace</h1>
+      <h1>World Peace Through Chocolate</h1>
     </header>
     <main>
-        <article>
-            <h2 style="color: #964B00">The Power of Chocolates in Solving World Hunger</h2>
-            <p>Chocolates have been a staple in many cultures for centuries, providing a source of comfort, joy, and delight. But did you know that chocolates can also be a powerful tool in solving world hunger? With their rich, velvety texture and sweet, indulgent taste, chocolates can bring people together and provide a sense of community and connection. In times of conflict and division, chocolates can be a symbol of unity and a reminder of the importance of shared humanity. By sharing chocolates with others, we can break down barriers and build bridges between cultures and communities. So, the next time you indulge in a piece of chocolate, remember that it's not just a tasty treat, but a powerful symbol of hope and peace.</p>
-            <h2 style="color: #8B0A0A">The Amazing Benefits of Strawberries</h2>
-            <p>Strawberries are one of the most widely consumed fruits in the world, and for good reason. Not only are they delicious, but they're also packed with nutrients and antioxidants that can help to boost your health and well-being. From their high water content to their low calorie count, strawberries are a great addition to any diet. They're also a great source of vitamin C, which is essential for a healthy immune system. And, of course, who can forget their sweet, sweet taste? So, next time you're at the grocery store, be sure to pick up a few baskets of strawberries to enjoy in your oatmeal, on top of yogurt, or as a sweet and crunchy snack.</p>
-            <h2 style="color: #FFC080">The Nutritional Power of Bananas</h2>
-            <p>Bananas are one of the most widely consumed fruits in the world, and for good reason. They're a great source of potassium, which is essential for maintaining healthy blood pressure and promoting bone health. Bananas are also a good source of fiber, which can help to regulate digestion and support healthy gut bacteria. And, of course, who can forget their sweet, creamy taste? Whether you enjoy them as a snack on the go, add them to your smoothie, or blend them into a delicious banana bread, bananas are a great addition to any diet. So, next time you're at the grocery store, be sure to pick up a few bunches of bananas to enjoy in your favorite recipe.</p>
-        </article>
-        <button class="button" onclick="accordion()">Open/Close FAQ</button>
-        <div class="accordion">
-            <h2 style="color: #964B00">Frequently Asked Questions</h2>
-            <div>
-                <p>Q: What is the best way to store chocolates?</p>
-                <p>A: It's best to store chocolates in an airtight container in a cool, dry place to maintain their freshness and quality.</p>
-                <p>Q: Can I freeze chocolates?</p>
-                <p>A: Yes, you can freeze chocolates for up to 6 months. Simply wrap them tightly in plastic wrap or aluminum foil and place them in a freezer-safe bag.</p>
-                <p>Q: Can I use chocolates in baking?</p>
-                <p>A: Yes, you can use chocolates in a variety of baked goods, such as cakes, cookies, and brownies. Simply melt the chocolates with a little bit of oil and mix well with your ingredients.</p>
-            </div>
-        </div>
-        <footer>
-            <p>About Us:</p>
-            <p>Our company was founded by Mr. Alex Buford, a chocolate lover and entrepreneur who saw the potential for chocolates to bring people together and promote world peace. With his passion for chocolates and dedication to quality, Mr. Buford has built a brand that is synonymous with excellence and taste.</p>
-        </footer>
+      <section>
+        <h2>Chocolates: The Answer to World Hunger</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+      <section>
+        <h2>Strawberries: The Sweet and Tangy Fruit</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+      <section>
+        <h2>Bananas: The Yellow Fruit</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+      <footer>
+        <h2>About Us</h2>
+        <p>Meet our founder, Mr. Alex Buford, a passionate advocate for world peace and a chocolate enthusiast.</p>
+      </footer>
+      <footer>
+        <h2>Frequently Asked Questions</h2>
+        <button class="button">What is the best way to store chocolates?</button>
+        <p>Answer: Store chocolates in an airtight container in a cool, dry place to preserve their flavor and texture.</p>
+        <button class="button">Can I use chocolate as a topping for my oatmeal?</button>
+        <p>Answer: Yes, you can definitely use chocolate as a topping for your oatmeal. It adds a delicious flavor and texture to your breakfast.</p>
+      </footer>
     </main>
-</body>
+  </body>
 </html>
 
